--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="true_button">True</string>
     <string name="false_button">False</string>
     <string name="next_button">Next</string>
+    <string name="prev_button">Prev</string>
+
     //Toasts
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
